--- a/pixel3Dapp/vue_project/package.json
+++ b/pixel3Dapp/vue_project/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "babylonjs": "^4.0.3",
+    "babylonjs-loaders": "^4.0.3",
     "vue": "^2.6.10"
   },
   "devDependencies": {
